-Uygulama genelinde tema seçimi ve dil ayarları güncellendi.
-Kullanıcı tercihleri için yeni tema seçimi eklendi.

-Bildirim ayarları ve kullanıcı arayüzü iyileştirildi.

-Bazı yerelleştirme dosyaları güncellenerek, içeriklerin doğru şekilde görüntülenmesi sağlandı.

--- a/polysleep/Resources/Localizations/Common.xcstrings
+++ b/polysleep/Resources/Localizations/Common.xcstrings
@@ -687,6 +687,74 @@
           }
         }
       }
+    },
+    "difficulty.beginner" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Beginner"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Başlangıç"
+          }
+        }
+      }
+    },
+    "difficulty.intermediate" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Intermediate"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Orta"
+          }
+        }
+      }
+    },
+    "difficulty.advanced" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Advanced"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "İleri"
+          }
+        }
+      }
+    },
+    "difficulty.extreme" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Extreme"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uzman"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
