--- a/polysleep/Resources/Localizations/History/History.xcstrings
+++ b/polysleep/Resources/Localizations/History/History.xcstrings
@@ -259,6 +259,132 @@
           }
         }
       }
+    },
+    "history.noRecords.title" : {
+      "comment" : "Title for empty state when no records exist",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No Sleep Records"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku Kaydı Yok"
+          }
+        }
+      }
+    },
+    "history.noRecords.message" : {
+      "comment" : "Message for empty state when no records exist",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Start tracking your sleep by adding your first entry below."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Aşağıdan ilk kaydınızı ekleyerek uyku takibinize başlayın."
+          }
+        }
+      }
+    },
+    "history.addNewRecord" : {
+      "comment" : "Button text to add a new sleep record",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Add First Record"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "İlk Kaydı Ekle"
+          }
+        }
+      }
+    },
+    "history.today" : {
+      "comment" : "Label shown for today's entries",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Today"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bugün"
+          }
+        }
+      }
+    },
+    "history.noRecord" : {
+      "comment" : "Text shown when no records exist for a day",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No records for this day"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bu gün için kayıt yok"
+          }
+        }
+      }
+    },
+    "history.moreBlocks" : {
+      "comment" : "Text indicating there are more sleep blocks",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "+ %d more blocks"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "+ %d blok daha"
+          }
+        }
+      }
+    },
+    "sleep.blocks" : {
+      "comment" : "Label for sleep blocks count",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%d sleep blocks"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%d uyku bloğu"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
